--- a/check-id.html
+++ b/check-id.html
@@ -18,7 +18,7 @@
         let id = getQueryParam('id');
         if (id) {
             // Perform your ID check logic here
-            document.getElementById('result').innerText = "ID: " + id + " is being checked.";
+            document.getElementById('result').innerText = "ID: " + id + " is a Valid Certificate.";
             // Example: call an API to validate the ID
         } else {
             document.getElementById('result').innerText = "No ID provided.";
